        font-weight:bold; 
        margin-top:1em; 
        margin-bottom:0.5em; 
        text-align:center }
    div.subtitle { 
        color:#009070; 
        font-size:0.8em; 
        margin-bottom:1em; 
        text-align:center }
    div.freetext { color:#f0f0f0 }
    div.list     { color:#7070f0 }
  </style>
</head>
<body>

$ 1.1.2
  % 1.1.2 (Struttin' Evil Mushroom)
  _ August 30, 2012
    * Nice performance fix for the scrolling thumbnail list in the background viewer
    
$ 1.1.1
  % 1.1.1 (Struttin' Evil Mushroom)
  _ August 30, 2012
    * Enabled Holo theme for Honeycomb and newer devices
    * Fixed crashy slider widget in the framerate cap preference
    * Added some extra information to crash reports to help me debug
    ! Thanks for your patience and understanding while I work through the bugs, I really appreciate it!

$ 1.1.0
  % 1.1.0 (Struttin' Evil Mushroom)
  _ August 24, 2012
    ! A lot of new features in this update (be sure to check out the settings!):
    * Auto background cycling option (when hidden, intervals, and never)
    * Background pan when swiping between home screens (on supported launchers)
    * Render framerate cap option (5-60 FPS in 5 step increments)
    * Frameskipping option (disabling this causes anything below 60fps to go slow-mo)
    * Output scaling options (exact fit with smoothing and best fit with cropping)
    ! Additionally, some internal changes to support the above:
    * New custom render update thread
    * Logic updates are now decoupled from render framerate
    * Minor logic update optimizations

$ 1.0.0
  % 1.0.0 (Struttin' Evil Mushroom)
  _ August 7, 2012
    * FINALLY. FIXED. COLOR CYCLING. Older phones have full effects now!
    * Fixed a terrible memory leak in the background selector

$ 0.10.1
  % 0.10.1 (Beautiful UFO)
  _ July 26, 2012
    * landscape orientation fixes: aspect ratio, scaling, and garbage at sides of screen (thank you for the report, Squishie!)

$ 0.10.0
  % 0.10.0 (Beautiful UFO)